Fix header spacing to have center button centered

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -23,17 +23,20 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   font-size: calc(10px + 2vmin);
   color: #FFAD60;
   font-family: 'Fredoka One', cursive;
   height: 100px;
   z-index: 25;
-  margin-left: -4em;
 }
 
 .gitcooking-title {
   font-family: 'Fredoka One', cursive;
+}
+
+.gitcooking-title-and-logo {
+  width: 200px
 }
 
 .App-link {
@@ -73,7 +76,7 @@ a.badge-primary {
   text-decoration: none;
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:680px) {
   .mob-view {
     display:block;
   }
@@ -148,3 +151,24 @@ a.badge-primary {
 // a {
 //   text-decoration: none;
 // }
+
+.header-name-logout {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.logged-in-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 200px;
+}
+
+.username-display {
+  margin: 0;
+}
+
+.profile-pic-display {
+  
+}
